--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -14,4 +14,4 @@ jobs:
     - name: luacheck install
       run: luarocks install --local luacheck
     - name: luacheck run
-      run: $HOME/.luarocks/bin/luacheck ./
+      run: $HOME/.luarocks/bin/luacheck ./ --globals core minetest blk armor skins smart_inventory player_api hb
