--- a/mods/BLK_CORE/player/mod.conf
+++ b/mods/BLK_CORE/player/mod.conf
@@ -1,3 +1,3 @@
 name = blk_player
-description = Controls the player settings for Blockd
+description = Controls the player related settings for Blockd
 depends = skinsdb, blk
