Changed out sound api to make it simpler
also added a couple crafting recipes for dye, and colored wool.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "Lua.diagnostics.globals": [
         "core",
         "sounds",
-        "blk"
+        "blk",
+        "vector"
     ],
     "selene.warnRoblox": false
 }
