Added blk.add_node and blk.get_node with similar functions for items and tools.

--- a/game.conf
+++ b/game.conf
@@ -1,3 +1,7 @@
 title = Blockd
 description = A survival game.
 author = Sheriff_Unit_3
+first_mod = blk
+allowed_mapgens = v5, v6, v7, carpathian
+default_mapgen = v7
+disabled_settings = enable_server
