--- a/mods/BLK_CORE/mapgen/mod.conf
+++ b/mods/BLK_CORE/mapgen/mod.conf
@@ -1,3 +1,3 @@
 name = blk_mapgen
 description = Adds biomes for Blockd
-depends = blk, blk_base, blk_farming
+depends = blk, blk_base, blk_farming, blk_plants, blk_wood
