--- a/mods/BLK_NODES/wood/mod.conf
+++ b/mods/BLK_NODES/wood/mod.conf
@@ -1,3 +1,3 @@
 name = blk_wood
 description = A mod that adds wood and wood related node to Blockd
-depends = blk, blk_tools
+depends = blk, blk_tools, blk_food
