Started circuits addition.
Signed-off-by: Sheriff U3 <210896603+Sheriff-Unit-3@users.noreply.github.com>

--- a/mods/BLK_NODES/doors/mod.conf
+++ b/mods/BLK_NODES/doors/mod.conf
@@ -1,3 +1,3 @@
 name = blk_doors
 description = Adds doors for Blockd
-depends = blk, blk_base, blk_wood
+depends = blk, blk_base, blk_wood, circuits
