--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "sounds",
         "blk",
         "vector",
-        "skins"
+        "skins",
+        "doors"
     ],
     "selene.warnRoblox": false
 }
